- Changed Update Version to Java8 version - Changed messages

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,6 @@
-name: ViaVersionAutoUpdate
+name: ViaVersionAutoUpdate-CLDE
 version: '${project.version}'
 main: me.adarsh.autoupdate.AutoUpdate
-author: [ Adarsh ]
+author: [ Adarsh, Chriis ]
+depend:
+  - CoreAPI
