--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,11 @@
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>de.craftleben</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.33-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
